[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/dimensi2_btn.gd" type="Script" id=1]
[ext_resource path="res://Scripts/dimensi2.gd" type="Script" id=2]
[ext_resource path="res://Scripts/dimensi2_check_btn.gd" type="Script" id=3]
[ext_resource path="res://Assets/sound/2d.mp3" type="AudioStream" id=4]
[ext_resource path="res://Assets/bg2d.png" type="Texture" id=5]
[ext_resource path="res://Assets/Btn/next.png" type="Texture" id=6]
[ext_resource path="res://Assets/Btn/back.png" type="Texture" id=7]
[ext_resource path="res://Assets/Btn/prev.png" type="Texture" id=8]

[node name="Dimensi2" type="Node2D"]
visible = false
script = ExtResource( 2 )

[node name="KaryaLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="TextureRect" type="TextureRect" parent="KaryaLayer"]
margin_left = -3.0
margin_top = -3.0
margin_right = 1021.0
margin_bottom = 597.0
texture = ExtResource( 5 )

[node name="Next" type="TextureButton" parent="KaryaLayer"]
margin_left = 859.0
margin_top = 63.0
margin_right = 1026.0
margin_bottom = 103.0
texture_normal = ExtResource( 6 )
script = ExtResource( 1 )

[node name="back" type="TextureButton" parent="KaryaLayer"]
anchor_right = 0.343
anchor_bottom = 0.178
margin_left = 35.0
margin_top = 525.0
margin_right = -111.96
margin_bottom = 474.56
texture_normal = ExtResource( 7 )
script = ExtResource( 1 )

[node name="Prev" type="TextureButton" parent="KaryaLayer"]
margin_left = 39.0
margin_top = 60.0
margin_right = 225.0
margin_bottom = 125.0
texture_normal = ExtResource( 8 )
script = ExtResource( 1 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="KaryaLayer"]
stream = ExtResource( 4 )
autoplay = true

[node name="Domba" type="Node2D" parent="KaryaLayer"]
visible = false
script = ExtResource( 2 )

[node name="Woll" type="Node2D" parent="KaryaLayer"]
visible = false
script = ExtResource( 2 )

[node name="Keranjang" type="Node2D" parent="KaryaLayer"]
visible = false
script = ExtResource( 2 )

[node name="Alat" type="Node2D" parent="KaryaLayer"]
visible = false
script = ExtResource( 2 )

[node name="HelperLayer" type="CanvasLayer" parent="KaryaLayer"]

[node name="BtnMargin" type="CheckButton" parent="KaryaLayer/HelperLayer"]
margin_top = 438.0
margin_right = 76.0
margin_bottom = 478.0
text = "Margin"
script = ExtResource( 3 )

[node name="BtnGrid" type="CheckButton" parent="KaryaLayer/HelperLayer"]
margin_left = 123.0
margin_top = 438.0
margin_right = 230.0
margin_bottom = 478.0
text = "Grid"
script = ExtResource( 3 )

[node name="BtnKartesian" type="CheckButton" parent="KaryaLayer/HelperLayer"]
margin_left = 230.0
margin_top = 438.0
margin_right = 369.0
margin_bottom = 478.0
text = "Kartesian"
script = ExtResource( 3 )

[node name="BtnBack" type="Button" parent="KaryaLayer/HelperLayer"]
margin_left = 676.0
margin_top = 449.0
margin_right = 718.0
margin_bottom = 469.0
text = "Back"
script = ExtResource( 1 )

[node name="Margin" type="Node2D" parent="KaryaLayer/HelperLayer"]
visible = false
script = ExtResource( 2 )

[node name="Grid" type="Node2D" parent="KaryaLayer/HelperLayer"]
visible = false
script = ExtResource( 2 )

[node name="Kartesian" type="Node2D" parent="KaryaLayer/HelperLayer"]
visible = false
script = ExtResource( 2 )

[connection signal="pressed" from="KaryaLayer/Next" to="KaryaLayer/Next" method="_on_BtnNext_pressed"]
[connection signal="pressed" from="KaryaLayer/back" to="KaryaLayer/back" method="_on_BtnBack_pressed"]
[connection signal="pressed" from="KaryaLayer/Prev" to="KaryaLayer/Prev" method="_on_BtnPrev_pressed"]
[connection signal="draw" from="KaryaLayer/Domba" to="KaryaLayer/Domba" method="_draw_domba"]
[connection signal="draw" from="KaryaLayer/Woll" to="KaryaLayer/Woll" method="_draw_woll"]
[connection signal="draw" from="KaryaLayer/Keranjang" to="KaryaLayer/Keranjang" method="_draw_keranjang"]
[connection signal="draw" from="KaryaLayer/Alat" to="KaryaLayer/Alat" method="_draw_alat"]
[connection signal="pressed" from="KaryaLayer/HelperLayer/BtnMargin" to="KaryaLayer/HelperLayer/BtnMargin" method="_on_BtnMargin_visibility_pressed"]
[connection signal="pressed" from="KaryaLayer/HelperLayer/BtnGrid" to="KaryaLayer/HelperLayer/BtnGrid" method="_on_BtnGrid_visibility_pressed"]
[connection signal="pressed" from="KaryaLayer/HelperLayer/BtnKartesian" to="KaryaLayer/HelperLayer/BtnKartesian" method="_on_BtnKartesian_visibility_pressed"]
[connection signal="pressed" from="KaryaLayer/HelperLayer/BtnBack" to="KaryaLayer/HelperLayer/BtnBack" method="_on_BtnBack_pressed"]
[connection signal="draw" from="KaryaLayer/HelperLayer/Margin" to="KaryaLayer/HelperLayer/Margin" method="_draw_margin"]
[connection signal="draw" from="KaryaLayer/HelperLayer/Grid" to="KaryaLayer/HelperLayer/Grid" method="_draw_grid"]
[connection signal="draw" from="KaryaLayer/HelperLayer/Kartesian" to="KaryaLayer/HelperLayer/Kartesian" method="_draw_kartesian"]
